--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     </style>
   </head>
   <body>
-    <h1>Hello i am here</h1>
-    
+    <h1>Travis Bot is here</h1>
+    <h2> I am Travis, I make your work easy</h2>
   </body>
 </html>
